fixing mobile spacing/line-height

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 @media only screen and (max-width: 474px) {
-    img.col-sm-6.float-sm-end.mb-3.ms-sm-3.me-3.resizeImg  {
+    img.col-sm-6.float-sm-end.mb-3.ms-3.me-3.resizeImg  {
       width: 300px!important;
       display: block;
       margin-left: auto;
       margin-right: auto;
+    }
+    .col {
+      flex: none!important;
     }
   }
 
